# payments_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile.api
docker/rabbitmq/: definitions.json
migrations/: env.py
migrations/versions/: 2a707b825305_create_payments_and_outbox_tables.py
src/core/: config.py  di.py  logging.py
src/core/db/: di.py
src/core/messaging/: broker.py  consumer_di.py  di.py  events.py  outbox_publisher_di.py  queues.py  topology.py
src/core/messaging/tests/: test_messaging_provider.py
src/core/security/: api_key_auth.py
src/core/security/tests/: test_api_key_auth.py
src/entrypoints/: api.py  consumer.py  container.py  outbox_publisher.py
src/entrypoints/tests/: test_container.py
src/payments/: di.py
src/payments/application/: outbox_publisher_service.py  payment_service.py
src/payments/application/interfaces/: event_publisher.py  outbox_repository.py  payment_repository.py  unit_of_work.py  webhook_sender.py
src/payments/application/message/: message_dto.py  message_mappers.py
src/payments/application/tests/: fakes.py  test_outbox_publisher_service.py  test_payment_service.py
src/payments/domain/: entities.py  events.py  exceptions.py  value_objects.py
src/payments/domain/entities/: outbox_entity.py  payment_entity.py
src/payments/domain/interfaces/: outbox_repository.py  payment_gateway.py  payment_repository.py
src/payments/domain/tests/: test_entities.py  test_value_objects.py
src/payments/infrastructure/db/: unit_of_work.py
src/payments/infrastructure/gateway/: fake_payment_gateway.py
src/payments/infrastructure/messaging/: consumer_handlers.py  event_publisher.py
src/payments/infrastructure/tests/: conftest.py  factories.py  (+4 more)
src/payments/presentation/: payment_dto.py  payment_mappers.py  payment_routes.py
src/payments/tests/: factories.py
(+13 files in other folders)
